--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -18,6 +18,9 @@ logging:
     ROOT: DEBUG
     io.github.jhipster: DEBUG
     com.fsd.sba: DEBUG
+    org:
+      springframework:
+        security: DEBUG
 
 eureka:
   instance:
@@ -101,7 +104,9 @@ jhipster:
       limit: 100000
       duration-in-seconds: 3600
     authorized-microservices-endpoints: # Access Control Policy, if left empty for a route, all endpoints will be accessible
-      app1: /api,/v2/api-docs # recommended dev configuration
+      user: /api,/v2/api-docs # recommended dev configuration
+      search: /api,/v2/api-docs
+      payment: /api,/v2/api-docs
   # CORS is only enabled by default with the "dev" profile, so BrowserSync can access the API
   cors:
     allowed-origins: '*'
